syntax = "proto3";

package channel;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "user_center_channel.proto";

// 渠道服务接口定义，渠道主要是配置用户登录时的可选登录方法
service Service{
  // AllChannel 获取全部渠道信息
  rpc AllChannel (google.protobuf.Empty)  returns (AllChannelReply) {
    option (google.api.http) = {
      get: "/user-center/admin/v1/channels",
    };
  }

  // AllChannel 获取全部渠道信息
  rpc GetTypes (google.protobuf.Empty)  returns (GetTypesReply) {
    option (google.api.http) = {
      get: "/user-center/admin/v1/channel/types",
    };
  }

  // AddChannel 添加渠道信息
  rpc AddChannel (AddChannelRequest)  returns (AddChannelReply) {
    option (google.api.http) = {
      post: "/user-center/admin/v1/channel",
      body:"*"
    };
  }

  // UpdateChannel 更新渠道信息
  rpc UpdateChannel (UpdateChannelRequest)  returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/user-center/admin/v1/channel",
      body:"*"
    };
  }

  // DeleteChannel 删除渠道信息
  rpc DeleteChannel (DeleteChannelRequest)  returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user-center/admin/v1/channel",
    };
  }
}